word done, pagination, sorting